1.0.0 更新uid目录结构， 新增dili-uid和uid-sdk项目