@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.dili</groupId>
 	<artifactId>dili-uid</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<description>dili-uid</description>
 	<name>dili-uid</name>
-	<packaging>jar</packaging>
+	<version>1.0.0-SNAPSHOT</version>
+	<description>父项目</description>
+	<packaging>pom</packaging>
 
 	<!-- 父工程定义 -->
 	<parent>
@@ -16,24 +17,22 @@
 		<version>3.7.1-SNAPSHOT</version>
 	</parent>
 
+	<modules>
+		<module>uid-sdk</module>
+		<module>uid</module>
+	</modules>
+
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>13</java.version>
-		<!--  XML生成路径  -->
-		<targetJavaProject>${basedir}/src/main/java</targetJavaProject>
+		<java.version>1.8</java.version>
+		<!-- MyBatis Generator -->
+		<!-- Java接口和实体类 -->
 		<templateRootDir>${basedir}/mbg-templates</templateRootDir>
 		<projectdir>${basedir}</projectdir>
-		<targetResourcesProject>${basedir}/src/main/resources</targetResourcesProject>
+		<!-- XML生成路径 -->
 		<targetXMLPackage>mapper</targetXMLPackage>
-		<targetMapperPackage>com.dili.uid.mapper</targetMapperPackage>
-		<targetModelPackage>com.dili.uid.domain</targetModelPackage>
-		<targetServicePackage>com.dili.uid.service</targetServicePackage>
-		<targetControllerPackage>com.dili.uid.controller</targetControllerPackage>
 	</properties>
 
-
 	<build>
-		<finalName>dili-uid</finalName>
 		<!-- 资源文件过滤 -->
 		<resources>
 			<resource>
@@ -41,62 +40,22 @@
 				<filtering>true</filtering>
 			</resource>
 		</resources>
-<!--		<resources>-->
-<!--			<resource>-->
-<!--				<directory>src/main/resources</directory>-->
-<!--				&lt;!&ndash; filtering为true的时候，这时只会排队<excludes>中指定的文件，&ndash;&gt;-->
-<!--				<filtering>true</filtering>-->
-<!--				<excludes>-->
-<!--					<exclude>**/*.woff</exclude>-->
-<!--					<exclude>**/*.woff2</exclude>-->
-<!--					<exclude>**/*.ttf</exclude>-->
-<!--				</excludes>-->
-<!--			</resource>-->
-<!--			<resource>-->
-<!--				<directory>src/main/resources</directory>-->
-<!--				&lt;!&ndash; filtering为false的时候，会把<includes>中指定的文件直接拷贝到classpath下-->
-<!--                    filter为true的时候，会先过滤一次，再把includes中的文件拷贝到classpath下&ndash;&gt;-->
-<!--				<filtering>false</filtering>-->
-<!--				<includes>-->
-<!--					<include>**/*.woff</include>-->
-<!--					<include>**/*.woff2</include>-->
-<!--					<include>**/*.ttf</include>-->
-<!--				</includes>-->
-<!--			</resource>-->
-<!--		</resources>-->
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>2.3.2.RELEASE</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>repackage</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<!-- 编译JDK版本 -->
 				<configuration>
-					<source>13</source>
-					<target>13</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<encoding>UTF-8</encoding>
-					<parameters>true</parameters>
-					<compilerArgument>-proc:none</compilerArgument>
-					<compilerArgs>
-						<arg>--add-exports=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED</arg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
-				<version>1.3.7</version>
+				<version>1.4.0</version>
 				<configuration>
 					<configurationFile>${basedir}/src/main/resources/generator/generatorConfig.xml</configurationFile>
 					<overwrite>true</overwrite>
@@ -112,94 +71,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-collections4</artifactId>
-			<version>4.1</version>
-		</dependency>
-
-		<!-- 利刃框架引入 -->
-		<dependency>
-			<groupId>com.dili</groupId>
-			<artifactId>ss-uid</artifactId>
-			<version>${sharp-sword.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.dili</groupId>
-			<artifactId>ss-mbg</artifactId>
-			<version>${sharp-sword.version}</version>
-		</dependency>
-		<!-- if you enable json support in spring mvc. -->
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.13</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.alibaba.cloud</groupId>
-			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-			<version>2.2.3.RELEASE</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.alibaba</groupId>
-					<artifactId>fastjson</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<dependency>
-			<groupId>com.alibaba.cloud</groupId>
-			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-			<version>2.2.3.RELEASE</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
-			<version>2.2.5.RELEASE</version>
-			<exclusions>
-				<exclusion>
-					<groupId>com.google.guava</groupId>
-					<artifactId>guava</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.alibaba.cloud/spring-cloud-starter-alibaba-sentinel -->
-		<!-- 哨兵依赖 -->
-		<dependency>
-			<groupId>com.alibaba.cloud</groupId>
-			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
-			<version>2.2.3.RELEASE</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-datasource-nacos</artifactId>
-			<version>1.8.0</version>
-		</dependency>
-		<!-- 内部包 -->
-		<dependency>
-			<groupId>com.dili</groupId>
-			<artifactId>uap-sdk</artifactId>
-			<version>2.11.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>com.dili</groupId>
-			<artifactId>ss-processor</artifactId>
-			<version>${sharp-sword.version}</version>
-		</dependency>
-
-		<!-- 公共信息 -->
-		<dependency>
-			<groupId>com.dili</groupId>
-			<artifactId>commons-web</artifactId>
-			<version>1.3.4-SNAPSHOT</version>
-		</dependency>
-
-	</dependencies>
-
-
 
 </project>
